# ARDEX

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  next-env.d.ts  next.config.mjs  package.json  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
arcium/: private_liquidation.arcis.rs
components/: ExchangeTerminal.tsx  WalletContextProvider.tsx
lib/arcium/: client.ts
lib/protocol/: math.ts  types.ts
lib/pyth/: prices.ts
lib/solana/: idl.ts  program.ts
migrations/: deploy.ts
programs/ardex/: Cargo.toml
programs/ardex/src/: lib.rs
public/: manifest.json
tests/: ardex.ts
