[package]
name = "ardex"
version = "0.1.0"
description = "ARDEX private perpetual futures program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ardex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
